# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_status.py  0004_alter_task_status.py  0005_alter_task_status.py
task_manager/templates/: base.html  delete.html  footer.html  form.html  home.html  navbar.html
task_manager/templates/labels/: list.html
task_manager/templates/statuses/: list.html
task_manager/templates/tasks/: list.html  task_show.html
task_manager/templates/users/: list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
